# python-gw2

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
gw2/: __init__.py  const.py  errors.py  utils.py
gw2/api/: __init__.py  _base.py  account.py  achievements.py  backstory.py  build.py  characters.py  colors.py  continents.py  currencies.py  daily_crafting.py  details.py  dungeons.py  emblems.py  emotes.py  files.py  finishers.py  gliders.py  guild.py  home.py  item_stats.py  items.py  legendary_armory.py  legends.py  mail_carriers.py  map_chests.py  maps.py  masteries.py  materials.py  minis.py  mounts.py  novelties.py  outfits.py  pets.py  professions.py  pvp.py  quaggans.py  quests.py  races.py  raids.py  (+12 more)
gw2/api/account/: __init__.py
gw2/api/achievements/: __init__.py  categories.py  groups.py
gw2/api/guild/: __init__.py  permissions.py  upgrades.py
gw2/api/stories/: __init__.py  seasons.py
gw2/api/wvw/: matches.py
gw2/gw2treasures/: __init__.py
gw2/models/: __init__.py  _base.py  account.py  achievements.py  backstory.py  build.py  characters.py  colors.py  common.py  continents.py  currencies.py  daily_crafting.py  details.py  dungeons.py  emblems.py  emotes.py  files.py  finishers.py  gliders.py  guild.py  home.py  item_stats.py  items.py  legendary_armory.py  legends.py  mail_carriers.py  map_chests.py  maps.py  masteries.py  materials.py  minis.py  mounts.py  novelties.py  outfits.py  pets.py  professions.py  pvp.py  quaggans.py  quests.py  races.py  (+13 more)
gw2/models/account/: __init__.py
gw2/models/achievements/: __init__.py  categories.py  groups.py
gw2/models/guild/: __init__.py  permissions.py  upgrades.py
gw2/models/stories/: __init__.py  seasons.py
gw2/models/wvw/: matches.py
test/: test_base.py  test_endpoints.py  test_gw2treasures.py
