[tool.poetry]
name = "gw2"
version = "0.2.2"
description = ""
repository = "https://github.com/invisi/python-gw2"
authors = ["Yannick Linke <invisi@0x0f.net>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
asyncio-throttle = "^1.0.2"
httpx = "^0.26.0"
pydantic = "^2.5"

[tool.poetry.group.dev.dependencies]
mypy = "1.8.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
respx = "^0.20.2"

[tool.ruff]
fix = true
ignore-init-module-imports = true
select = ["E", "F", "I", "UP", "N", "B", "T20", "Q", "PLC", "PLE", "PLR", "PLW"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
