[tool.poetry]
name = "gw2"
version = "0.2.5"
description = "A Python wrapper for easy and typed access of Guild Wars 2's API"
repository = "https://github.com/invisi/python-gw2"
authors = ["Yannick Linke <invisi@0x0f.net>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
asyncio-throttle = "^1.0.2"
httpx = ">=0.26.0,<0.28.0"
pydantic = ">=2.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "1.10.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
respx = "^0.20.2"

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore-init-module-imports = true
select = ["E", "F", "I", "UP", "N", "B", "T20", "Q", "PLC", "PLE", "PLR", "PLW"]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["datetime"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
namespace_packages = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
