[project]
name = "gw2"
version = "0.2.10"
description = "A Python wrapper for easy and typed access of Guild Wars 2's API"
authors = [{ name = "Yannick Linke", email = "invisi@0x0f.net" }]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.11"
dependencies = [
    "asyncio-throttle >= 1.0.2",
    "httpx >= 0.26.0",
    "pydantic >= 2.5.0",
]

[project.urls]
Issues = "https://github.com/Invisi/python-gw2/issues"
Repository = "https://github.com/invisi/python-gw2.git"

[tool.uv]
dev-dependencies = [
    "mypy ~= 1.12.0",
    "pytest ~= 8.3.3",
    "pytest-asyncio ~= 0.24.0",
    "respx ~= 0.21.1"
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "T20", "Q", "PLC", "PLE", "PLR", "PLW"]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["datetime"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
namespace_packages = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
